<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tricycle_test</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for testing tricycle robot control and simulation</description>
  <maintainer email="cyrax_pc@bk.ru">kaisar</maintainer>
  <license>Apache-2.0</license>  <!-- Update with actual license if different -->

  <author email="cyrax_pc@bk.ru">kaisar</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

